--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -26,12 +26,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
+            android:textSize="16sp"
             android:paddingStart="8dp"/>
 
         <TextView
             android:id="@+id/popularity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textStyle="italic"
+            android:textSize="16sp"
             android:paddingStart="8dp"/>
 
 
