--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -26,9 +27,9 @@
                 android:id="@+id/poster"
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
-                android:scaleType="fitXY"
+                android:scaleType="center"
                 android:src="@mipmap/ic_launcher"
-                android:contentDescription="@{resultBinding.posterPath}"
+                bind:posterPath="@{resultBinding.posterPath}"
                 android:layout_gravity="center" />
 
             <TextView
